fix: promo title wrap

--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -19,7 +19,7 @@
 }
 
 .promo__title {
-  max-width: 600px;
+  max-width: 640px;
   margin: 0;
   font-size: 50px;
   font-weight: 400;
